--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -137,7 +137,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://dn3dhcszbgs9s.cloudfront.net/N2kpozeZa"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d18bx7gz18d1cs.cloudfront.net/S2kpozeZb"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -218,7 +218,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/26/n10089507.md#1" target="_blank">共产暴政录：“破四旧”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
